test/cli/test/variables-deprecated/cm-array-example.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cm-array-example
spec:
  admission: true
  background: false
  rules:
  - context:
    - configMap:
        name: roles-dictionary
        namespace: default
      name: roles-dictionary
    match:
      any:
      - resources:
          kinds:
          - Pod
    name: validate-role-annotation
    validate:
      deny:
        conditions:
        - key: '{{ request.object.metadata.annotations.role }}'
          operator: NotIn
          value: '{{ "roles-dictionary".data."allowed-roles" }}'
      message: 'The role {{ request.object.metadata.annotations.role }} is not in
        the allowed list of roles: {{ "roles-dictionary".data."allowed-roles" }}.'
      failureAction: Enforce
