test/cli/test/variables-deprecated/cm-globalval-example.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cm-globalval-example
spec:
  admission: true
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: validate-mode
    validate:
      deny:
        conditions:
        - key: '{{ request.mode }}'
          operator: NotEquals
          value: dev
      message: The value {{ request.mode }} for val1 is not equal to 'dev'.
      failureAction: Enforce
