test/cli/test/variables-deprecated/cm-multiple-example.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cm-multiple-example
spec:
  admission: true
  background: true
  rules:
  - context:
    - configMap:
        name: some-config-map
        namespace: some-namespace
      name: dictionary
    - configMap:
        name: another-config-map
        namespace: some-namespace
      name: anotherdictionary
    match:
      any:
      - resources:
          kinds:
          - Pod
    name: example-configmap-lookup
    validate:
      pattern:
        metadata:
          labels:
            my-environment-name: '{{dictionary.data.env || anotherdictionary.data.env
              }}'
      failureAction: Audit
