test/cli/test/variables-deprecated/cm-variable-example.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cm-variable-example
spec:
  admission: true
  background: true
  rules:
  - context:
    - configMap:
        name: some-config-map
        namespace: some-namespace
      name: dictionary
    match:
      any:
      - resources:
          kinds:
          - Pod
    name: example-configmap-lookup
    validate:
      pattern:
        metadata:
          labels:
            my-environment-name: '{{dictionary.data.env}}'
      failureAction: Audit
