test/cli/test/variables-deprecated/image-example.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: images
spec:
  admission: true
  background: true
  validationFailureAction: Enforce
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: only-allow-trusted-images
    preconditions:
      all:
      - key: '{{request.operation}}'
        operator: NotEquals
        value: DELETE
    validate:
      foreach:
      - context:
        - imageRegistry:
            reference: '{{ element.image }}'
          name: imageData
        deny:
          conditions:
            all:
            - key: '{{ imageData.configData.config.User || ''''}}'
              operator: Equals
              value: ""
            - key: '{{ imageData.registry }}'
              operator: NotEquals
              value: ghcr.io
        list: request.object.spec.containers
      message: images with root user are not allowed
